CSS: Fix .controls shadow overlapping navigation flyout
refs #3815

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -146,7 +146,7 @@
         left: 0;
         right: 0;
         bottom: -1.0625em;
-        z-index: 10;
+        z-index: 1;
       }
 
       > .tabs {
